--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,13 @@
+@import url('../assets/colors.css');
+
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
 
-  color: #0f0f0f;
-  background-color: #f6f6f6;
+  color: var(--text);
+  background-color: var(--background);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,9 +16,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-  }
+body {
+  margin: 0px;
+}
+
+.MainContainer {
+  height: 100vh;
 }
