--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,7 @@
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
+  user-select: none;
 
   color: var(--text);
   background-color: var(--background);
