--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,8 +1,8 @@
 @import url('../assets/colors.css');
 
 .MenuContainer {
-    width: 17%;
-    padding-top: 8px;
+    width: max(17%, 200px);
+    padding-top: 18px;
     padding-bottom: 8px;
     padding-left: 20px;
 }
@@ -20,7 +20,7 @@
 }
 
 .MenuButton:hover {
-    color: var(--text-active);
+    color: var(--text-button-active);
     cursor: pointer;
     background-color: var(--secondary);
 }
