--- a/src/styles/Edit.css
+++ b/src/styles/Edit.css
@@ -144,3 +144,21 @@
     cursor: pointer;
     background-color: var(--secondary);
 }
+
+.wordInput {
+    font-size: 14px;
+    height: 15px;
+    border: none;
+    border-radius: 5px;
+    border-bottom: 2px solid #717171;
+    width: 90%;
+    margin-left: 10px;
+    margin-bottom: 5px;
+}
+
+.proverbInput {
+    margin-left: 5px;
+    font-size: 14px;
+    display: flex;
+    align-content: center;
+}
